--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/css/style.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://style.binary.com/binary.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
     <script src="assets/js/code.min.js" defer></script>
 </head>
 <body>
@@ -88,7 +87,7 @@
             <div class="row">
                 <div class="col">
                     <div class="header-content">
-                        <h1 class="header-title content-inverse-color ft-300">Welcome to the Future</h1>
+                        <h1 class="header-title content-inverse-color ft-300">Welcome to the future</h1>
                         <span class="header-sub secondary-color">Introducing USB</span>
                         <span class="header-sub content-inverse-color">A stablecoin backed by the US Dollar</span>
                     </div>
@@ -103,7 +102,7 @@
                     <img class="usb-coin" src="assets/images/usb-coin-logo.png" alt="USB">
                 </div>
                 <div class="col-lg-10 col-md-9 col-sm-8">
-                    <p class="content-inverse-color ft-400">Guaranteed by Binary.com, USB is a digital currency pegged on a one-to-one basis with the US Dollar. Send and receive payments with the peace of mind that your currency is backed by the strength of Binary.com’s balance sheet.</p>
+                    <p class="content-inverse-color ft-400">Guaranteed by Binary.com, USB is a digital currency pegged to the US Dollar on a one-to-one basis. Send and receive payments with the peace of mind that your currency is backed by the strength of Binary.com’s balance sheet.</p>
                 </div>
             </div>
         </div>
@@ -131,7 +130,7 @@
                 <div class="col-md-10">
                     <p>Explore the possibilities of a new generation of cryptocurrency</p>
                     <p><a class="button" href=""><span>Purchase Your USB Stablecoin Now</span></a></p>
-                    <div class="separator-lg"></div>
+                    
                 </div>
             </div>
         </div>
@@ -150,7 +149,7 @@
                 <div class="col-lg-3 mb-bottom-30">
                     <div class="icon-xl icon-redeem"></div>
                     <h3 class="ft-400">Fully backed by US Dollar</h3>
-                    <p>USB is a stable coin pegged one-to-one with the US Dollar. Binary.com guarantees that 1 USB will always be worth 1 USD.</p>
+                    <p>USB is a stable coin pegged to the US Dollar on a one-to-one basis. Binary.com guarantees that 1 USB will always be worth 1 USD.</p>
                 </div>
                 <div class="col-md-auto"></div>
                 <div class="col-lg-3 mb-bottom-30">
@@ -164,6 +163,13 @@
                     <h3 class="ft-400">Peace of mind</h3>
                     <p>USB is backed by Binary.com –– a profitable, 18-year-old company with <a href="https://www.binary.com/en/binary-in-numbers.html">annual turnover exceeding USD 1 billion</a>.</p>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="separator-line-thin-gray"></div>
             </div>
         </div>
     </div>
@@ -252,7 +258,7 @@
         <div class="container">
             <div class="row">
                 <div class="col center-text">
-                    <h2 class="primary-color">Receive Discounts</h2>
+                    <h2 class="primary-color">Enjoy discounts for trading in USB</h2>
                     <p>Binary.com clients who trade using USB will enjoy discounts on binary option purchase prices. The amount of the discount depends on the probability of the option (i.e. its stake divided by payout). The discount amounts are:</p>
                 </div>
             </div>
